Use `javafx-gradle-plugin` for JDK 11+. Also contains improvements to javadoc task.