@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        maven {
+            setUrl("https://plugins.gradle.org/m2/")
+        }
+    }
+    dependencies {
+        classpath("org.openjfx:javafx-plugin:0.0.7")
+    }
+}
+
 ext.java9Args = [
         // For various usages of TraversalEngine
         "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
@@ -29,31 +40,6 @@ ext.java9RuntimeArgs = [
         "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls"
 ]
 
-static String getOSName() {
-    final String osName = System.getProperty("os.name").toLowerCase()
-    if (osName.contains("linux")) {
-        return ("linux")
-    } else if (osName.contains("mac os x") || osName.contains("darwin") || osName.contains("osx")) {
-        return ("mac")
-    } else if (osName.contains("windows")) {
-        return ("win")
-    }
-    return ("")
-}
-
-ext.javafx_modules = [
-        'javafx-base',
-        'javafx-graphics',
-        'javafx-controls',
-        'javafx-media',
-        'javafx-web'
-]
-
-if (JavaVersion.current().isJava11Compatible()) {
-    ext.javafx_version = '11'
-    ext.platform = getOSName()
-}
-
 subprojects {
 
     apply plugin: 'java'
@@ -83,8 +69,10 @@ subprojects {
     targetCompatibility = '1.9'
 
     if (JavaVersion.current().isJava11Compatible()) {
-        sourceCompatibility = rootProject.javafx_version
-        targetCompatibility = rootProject.javafx_version
+        apply plugin: 'org.openjfx.javafxplugin'
+        javafx {
+            modules = [ 'javafx.controls', 'javafx.media', 'javafx.web' ]
+        }
     }
 
     afterEvaluate {
@@ -102,68 +90,16 @@ subprojects {
                 // Show that tests are run in the command-line output
                 events 'started', 'passed'
             }
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                jvmArgs = [
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'ALL-MODULE-PATH',
-                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-                ]
-                classpath = files()
-            }
         }
-
-        compileJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs += [
-                        '--module-path', classpath.asPath,
-                ]
-                classpath = files()
-            }
-            options.encoding = "UTF-8"
-            options.incremental = true
-            if ( project.name != "fxsampler" ) {
-                options.compilerArgs += java9Args
-            }
-        }
-
-        javadoc {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                exclude '**/module-info.java'
-                exclude 'impl/*'
-                options.addStringOption('-module-path', classpath.asPath)
-                options.addStringOption('-class-path', "")
-                options.addBooleanOption('html5', true)
-                options.addBooleanOption('javafx', true)
-                options.addBooleanOption('Xdoclint:none', true)
-                options.encoding = 'UTF-8'
-                javafx_modules.stream()
-                    .map { module -> module.replace("-", ".") }
-                    .each {
-                        options.addStringOption('-add-modules', it)
-                }
-                // TODO: Uncomment once Javadoc link is fixed for JDK 11
-                /*if (JavaVersion.current().java11Compatible) {
-                    options.links("https://openjfx.io/javadoc/11")
-                    options.links("https://docs.oracle.com/en/java/javase/11/docs/api")
-                } else {*/
-                options.links("https://docs.oracle.com/javase/9/docs/api")
-                // }
-                // Only required JDK 9/10
-                options.addMultilineStringsOption("-add-exports").setValue(
-                    [
-                        'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
-                        'javafx.web/com.sun.webkit=ALL-UNNAMED',
-                        'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED'
-                    ]
-                )
-            }
-            // The following can be removed once we start building with 12
-            // https://bugs.openjdk.java.net/browse/JDK-8212233
-            failOnError false
+    }
+    
+    javadoc {
+        def javaVersion = JavaVersion.current().majorVersion
+        if (JavaVersion.current().java11Compatible) {
+            options.links("https://openjfx.io/javadoc/"+ javaVersion)
+            options.links("https://docs.oracle.com/en/java/javase/" + javaVersion + "/docs/api")
+        } else {
+            options.links("https://docs.oracle.com/javase/" + javaVersion + "/docs/api")
         }
     }
 
